@@ -1,3 +1,8 @@
+2012-08-20  Don Porter  <dgp@users.sourceforge.net>
+
+	* generic/tclPathObj.c:	[Bug 3559678] Fix bad filename normalization
+	when the last component is the empty string.
+
 2012-08-20  Jan Nijtmans  <nijtmans@users.sf.net>
 
 	* win/tclWinPort.h:  Remove wrapper macro for ntohs(): unnecessary,
